更新: GoogleService-InfoPlist

--- a/BookList-iOS/AppResources/Support/InfoPlist/GoogleService-Info.plist
+++ b/BookList-iOS/AppResources/Support/InfoPlist/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>119517954735-jh3of822oiaou1ruphnto5pda0q4fubp.apps.googleusercontent.com</string>
+	<string>397763131414-hlvtnrr2ngeitp1d0cam5rv1ofn536lm.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.119517954735-jh3of822oiaou1ruphnto5pda0q4fubp</string>
+	<string>com.googleusercontent.apps.397763131414-hlvtnrr2ngeitp1d0cam5rv1ofn536lm</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDeVMFo2XSEPyZTb9nkUR-0qPgTxUR3nm4</string>
+	<string>AIzaSyDi2-jI5WLGC87JELc4WN-67PxF_fkIBk4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>119517954735</string>
+	<string>397763131414</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.yossibank.Collections</string>
+	<string>com.yossibank.BookList</string>
 	<key>PROJECT_ID</key>
-	<string>collections-a4d18</string>
+	<string>booklist-ios</string>
 	<key>STORAGE_BUCKET</key>
-	<string>collections-a4d18.appspot.com</string>
+	<string>booklist-ios.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:119517954735:ios:8c6175aa06216f85cf8a5a</string>
+	<string>1:397763131414:ios:35179ead3c3a2788721d37</string>
 </dict>
 </plist>
