--- a/BookList-iOS.xcodeproj/xcshareddata/xcschemes/BookList-iOS.xcscheme
+++ b/BookList-iOS.xcodeproj/xcshareddata/xcschemes/BookList-iOS.xcscheme
@@ -73,6 +73,10 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugDisabled"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
