--- a/BookList-iOS.xcodeproj/xcshareddata/xcschemes/BookList-iOS.xcscheme
+++ b/BookList-iOS.xcodeproj/xcshareddata/xcschemes/BookList-iOS.xcscheme
@@ -76,7 +76,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-FIRAnalyticsDebugDisabled"
+            argument = "-FIRDebugDisabled"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
