#109 Domain層テスト作成、Data層部分の構造体修正

--- a/BookManager.xcodeproj/xcshareddata/xcschemes/BookManager.xcscheme
+++ b/BookManager.xcodeproj/xcshareddata/xcschemes/BookManager.xcscheme
@@ -48,6 +48,16 @@
                ReferencedContainer = "container:BookManager/APIKit">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DomainKitTests"
+               BuildableName = "DomainKitTests"
+               BlueprintName = "DomainKitTests"
+               ReferencedContainer = "container:BookManager/DomainKit">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
